--- a/src/templates/index.html.twig
+++ b/src/templates/index.html.twig
@@ -1,37 +1,43 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-full">
 <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 
     <title>HF API PHP Client</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 </head>
-<body>
-    <div class="container">
-        <h1>
-            HF PHP Client Demo
-        </h1>
-        <div class="container">
-            <div class="User">
-                <form id="form--User" action="/user" method="POST">
-                    <div class="form-group">
-                        <label for="uidInput">User UID</label>
-                        <input type="text" class="form-control" id="uidInput" name="uid" aria-describedby="uidHelp" placeholder="2602549">
-                        <small id="uidHelp" class="form-text text-muted">User unique ID</small>
-                    </div>
-                    <button type="submit" class="btn btn-primary" id="viewUserButton">Submit</button>
-                </form>
-                <div id="User--content"></div>
+<body class="md:flex md:content-center md:justify-center md:h-full md:items-center md:bg-gray-200">
+<div class="md:bg-gray-400">
+    <div class="bg-gray-800 text-gray-300 text-center">
+        HF PHP Client Demo
+    </div>
+    <div class="md:flex md:justify-between">
+        <div class="User shadow-lg w-full">
+            <form id="form--User" action="/user" method="POST">
+                <div class="p-4">
+                    <label for="uidInput" class="block m-2">User UID</label>
+                    <input type="text" class="h-12 m-2 border shadow-inner w-full" id="uidInput" name="uid" aria-describedby="uidHelp" placeholder="2602549">
+                    <button type="submit" class="m-2 bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded" id="viewUserButton">Submit</button>
+                </div>
+            </form>
+
+        </div>
+        <div class="bg-gray w-full text-center">
+            <div class="p-4">
+                <div id="User--content">Waiting for request</div>
                 <div id="User--error" style="color: red; text-align:center"></div>
             </div>
         </div>
     </div>
 
-    <script src="public/js/user.ajax.js"></script>
+</div>
+
+<script src="public/js/user.ajax.js"></script>
 
 </body>
 </html>
